# whatdidido

./: .gitignore  .pre-commit-config.yaml  CONFIG.md  README.md  main.py  pyproject.toml
.github/workflows/: pre-commit.yml  tests.yml
models/: work_item.py
providers/: __init__.py  github.py  jira.py
scripts/: upload_fake_jira_tickets.py  upload_fake_linear_issues.py
src/: config.py  main.py  persist.py  summarize.py
src/models/: work_item.py
src/providers/: base.py  jira.py  linear.py
src/service_integrations/: base.py  openai.py
src/services/: report_service.py
src/utils/: lock_utils.py
test_data/: fake_jira_tickets.csv  fake_linear_issues.csv
tests/: README.md  __init__.py  conftest.py  smoke_test.py  test_config.py  test_lock_utils.py  test_providers_jira.py  test_providers_linear.py  test_service_integrations_openai.py  test_summarize.py
