[project]
name = "whatdididoagain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.0.0",
    "jira>=3.0.0",
    "pygithub>=2.8.1",
    "pytz>=2025.2",
    "questionary>=2.1.1",
    "python-dotenv>=1.1.1",
    "pydantic>=2.12.3",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
]
