[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whatdidido"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.0.0",
    "filelock>=3.0.0",
    "jira>=3.0.0",
    "pygithub>=2.8.1",
    "pytz>=2025.2",
    "questionary>=2.1.1",
    "python-dotenv>=1.1.1",
    "pydantic>=2.12.3",
    "openai>=2.6.0",
    "rich>=13.0.0",
]

[project.scripts]
whatdidido = "main:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]

[tool.setuptools]
packages = ["models", "providers", "service_integrations"]
package-dir = {"" = "src"}

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
